# Tsubaki-Audio-Lable

./: .gitignore  LICENSE  README.md  app.py  build.bat  mfa-cmd.bat  package-lock.json  package.json  pyproject.toml  run.bat  tsconfig.json  vite.config.ts
backend/: svpWrite.py  ustxWrite.py  vsqxWrite.py
src/: env.d.ts  index.html  main.css  main.ts
src/components/: App.vue  ExportPanel.vue  FileUploadPanel.vue  PitchEditor.vue  PitchExtractor.vue  WaveformViewer.vue  app.vue  app.vue.ts
